--- a/views/daily_challenge.ejs
+++ b/views/daily_challenge.ejs
@@ -28,7 +28,7 @@ include('partials/sidebar', { page: 'gamified_learning' }) %>
             font-weight: 700;
           "
         >
-          +<%= task.xp %> XP
+          +<%= task.experienceReward %> XP
         </div>
       </div>
 
