--- a/views/weekly_challenge.ejs
+++ b/views/weekly_challenge.ejs
@@ -38,7 +38,7 @@ include('partials/sidebar', { page: 'gamified_learning' }) %>
             color: #34d399;
           "
         >
-          ⚡ Reward: <strong><%= task.xp %> XP</strong>
+          ⚡ Reward: <strong>+<%= task.experienceReward %> XP</strong>
         </div>
         <div
           style="
