--- a/views/monthly_challenge.ejs
+++ b/views/monthly_challenge.ejs
@@ -53,7 +53,7 @@ include('partials/sidebar', { page: 'gamified_learning' }) %>
           class="xp-badge"
           style="font-size: 1.2rem; padding: 0.5rem 1.5rem"
         >
-          💎 <%= task.xp %> XP REWARD
+          💎 +<%= task.experienceReward %> XP REWARD
         </span>
       </div>
     </div>
